XMLExper/m12/m12_441_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘virtual bool tinyxml2::XMLComment::ShallowEqual(const tinyxml2::XMLNode*) const’:
tinyxml2.cpp:1336:94: error: cannot dynamic_cast ‘comment’ (of type ‘const class tinyxml2::XMLComment*’) to type ‘class tinyxml2::XMLNode*’ (conversion casts away constness)
 1336 |     return ( comment && XMLUtil::StringEqual( /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(comment)->Value(), Value() ));
      |                                                                                              ^
diff: tinyxml2.o: No such file or directory
